Implements auth routes for Login, Logout and Refresh. Login POST endpoint created
